get all private chats
